2003-11-11  Bolian Yin <bolian.yin@sun.com>
                                                                                
        Fixes #50538
                                                                                
        * new files:
                widgets/ea-calendar-cell.[hc]
                                                                                
        * widgets/ea-calendar-item: impl. atk selection and atk table interface.        * widgets/Makefile.am : use shared object library (.so)
                                                                                
2003-11-07  JP Rosevear <jpr@ximian.com>

	* calendar/Makefile.am (INCLUDES): don't include toplevel libical
	
2003-11-07  JP Rosevear <jpr@ximian.com>

	* Handle some more renaming
	
2003-11-07  JP Rosevear <jpr@ximian.com>

	* Reflect renaming of ECalView to ECalendarView

2003-11-04  Bolian Yin <bolian.yin@sun.com>

	Fixes # 48509

	* new files:
		ea-cell-table.h ea-cell-table.c
	* calendar/Makefile.am: add entries for new files
	* calendar/New files added:
		ea-day-view-main-item.c ea-day-view-main-item.h
		ea-day-view-cell.c ea-day-view-cell.h
	* Add debug info and remove some non-C99 compilers warnings.
	* calendar/ea-cal-view: add action interface. 

2003-10-09  Jeffrey Stedfast  <fejj@ximian.com>

	* calendar/Makefile.am: INCLUDE path fixes for changes made to
	libical build.

2003-08-27  Bolian Yin <bolian.yin@sun.com>

	* Makefile.am: add widgets directory; move calendar idl stuff to
	calendar directory; stop make a single shared lib for whole a11y
	stuff.

	* ea-factory.h: make factory macros available to GOBJECT

	* calendar/Makefile.am: add calendar idl stuff

	* calendar/ea-cal-view-event.c: add atkcomponent interface.

	* calendar/ea-gnome-calendar.c (ea_gcal_switch_view_cb): add
	details for "children_changed".

	* new widgets directory for widgets a11y stuff, new files are:
		widgets/Makefile.am, widgets/ea-calendar-item.c,