@@ -1,3 +1,7 @@
+2003-12-03  Ettore Perazzoli  <ettore@ximian.com>
+
+	* calendar/Makefile.am (SHELL_IDLS): Only get Evolution.idl.
+
 2003-11-11  Bolian Yin <bolian.yin@sun.com>
                                                                                 
         Fixes #50538
